@@ -7,6 +7,7 @@ object FBatchOberflaeche: TFBatchOberflaeche
   ClientHeight = 520
   ClientWidth = 782
   Color = cl3DDkShadow
+  DesignTimePPI = 144
   Font.Height = 14
   Font.Name = 'System'
   Font.Pitch = fpVariable
@@ -18,7 +19,7 @@ object FBatchOberflaeche: TFBatchOberflaeche
   OnMouseUp = FormMouseUp
   OnResize = FormResize
   Position = poScreenCenter
-  LCLVersion = '1.6.4.0'
+  LCLVersion = '1.8.4.0'
   object PanelFillScreen: TPanel
     Left = 0
     Height = 520
@@ -84,9 +85,9 @@ object FBatchOberflaeche: TFBatchOberflaeche
       end
       object LabelVersion: TLabel
         Left = 76
-        Height = 16
+        Height = 14
         Top = 16
-        Width = 85
+        Width = 80
         Alignment = taRightJustify
         Caption = 'LabelVersion'
         Font.Color = clBlack
