@@ -7,6 +7,13 @@ isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-pac
 opsi-winst/opsi-script (4.12.0.31) stable; urgency=low
 
   * new paths for Linux:
+     osconf: opsiscriptconfinit = '/etc/opsi-script/opsi-script.conf';
+     osbatchgui: skindirectoryDefault = '/usr/share/opsi-script/skin';
+     osbatchgui: skindirectoryCustomWin = '/usr/share/opsi-script/customskin';
+     osparser: // search in /usr/share/opsi-script/lib
+     osparser: '%opsiLogDir%' = '/var/log/opsi-script'
+     oslog: StandardLogPath := '/var/log/opsi-script/';
+  * osencoding: do not write out supported encodings; fixes #3700
 
 -- Detlef Oertel <d.oertel@uib.de>  Wed, 17 10 2018:15:00:00 +0200
 
